--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   provider: ^6.1.2
   google_fonts: ^6.2.1
   flutter_svg_provider: ^1.0.7
+  table_calendar: ^3.1.2
 
 dev_dependencies:
   flutter_test:
